@@ -1,5 +1,6 @@
 The following changes have been made between John 1.7.8 and 1.7.9:
 
+* Added optional parallelization of the MD5-based crypt(3) code with OpenMP.
 * Added optional parallelization of the bitslice DES code with OpenMP.
 * Replaced the bitslice DES key setup algorithm with a faster one, which
 significantly improves performance at LM hashes, as well as at DES-based
@@ -268,4 +269,4 @@ Mac OS X (PowerPC and x86), SCO, BeOS.
 * Bug and portability fixes, and new bugs.
 * Bonus: "Strip" cracker included in the default john.conf (john.ini).
 
-$Owl: Owl/packages/john/john/doc/CHANGES,v 1.69 2011/11/20 05:20:33 solar Exp $
+$Owl: Owl/packages/john/john/doc/CHANGES,v 1.70 2011/11/21 02:36:55 solar Exp $
